force-app/main/default/objects/Project_IDs__c.object
<CustomObject>
    <description>Project IDs are the financial allocation IDs that replace Budget Center numbers for Deals, Contracts, and Payment Requests.</description>
    <fields>
        <fullName>Award_ID_Description__c</fullName>
        <label>Award ID Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_ID__c</fullName>
        <label>Award ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Origin__c</fullName>
        <label>Geo Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lobbying_Project_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created on 8/11/17 so we can easily identify lobbying project ids and require an activity code if a payment request is posted to a lobbying project id.</description>
        <inlineHelpText>Check if this is a lobbying project id that requires a lobbying activity code when used on payment requests.</inlineHelpText>
        <label>Lobbying Project ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Project_ID_Record_Number__c</fullName>
        <displayFormat>Project ID-{MM}{DD}{YY}-{0000}</displayFormat>
        <label>Unique Project ID Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Project IDs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Award_ID__c</columns>
        <columns>Award_ID_Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bird_Returns</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Award_ID__c</columns>
        <columns>Award_ID_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Description__c</field>
            <operation>contains</operation>
            <value>Bird</value>
        </filters>
        <label>Bird Returns</label>
    </listViews>
    <listViews>
        <fullName>Lobbying_Project_IDs</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Award_ID__c</columns>
        <columns>Lobbying_Project_ID__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lobbying_Project_ID__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Lobbying Project IDs</label>
        <sharedTo>
            <group>Finance</group>
            <group>Operations_Managers</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project IDs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>